--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "markdown": "^0.5.0",
     "mongoose": "^4.0.2",
     "superagent": "^1.2.0",
+    "swig": "^1.4.2",
     "tingodb": "^0.3.4",
     "tungus": "0.0.4"
   },
