--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "author": "Frank.Zhang",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.12.4",
     "cheerio": "^0.19.0",
     "express": "^4.12.3",
     "markdown": "^0.5.0",
     "mongoose": "^4.0.2",
+    "multer": "^0.1.8",
     "superagent": "^1.2.0",
     "swig": "^1.4.2",
     "tingodb": "^0.3.4",
