--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,11 @@
     "EaselJS": "~0.8.0",
     "TweenJS": "~0.6.0",
     "SoundJS": "~0.6.0",
-    "PreloadJS": "~0.6.0"
+    "PreloadJS": "~0.6.0",
+    "angular": "~1.3.15",
+    "angular-route": "~1.3.15",
+    "angular-bootstrap": "~0.13.0",
+    "angular-animate": "~1.3.15",
+    "angular-ui-router": "~0.2.15"
   }
 }
