--- a/package.json
+++ b/package.json
@@ -10,26 +10,25 @@
     "body-parser": "^1.12.4",
     "cheerio": "^0.19.0",
     "express": "^4.12.3",
-    "markdown": "^0.5.0",
     "mongoose": "^4.0.2",
     "multer": "^0.1.8",
-    "superagent": "^1.2.0",
+    "request": "^2.55.0",
     "swig": "^1.4.2",
     "tingodb": "^0.3.4",
     "tungus": "0.0.4"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-cdn": "^0.6.5",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "^0.6.0",
-    "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-cssmin": "^0.10.0clear",
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-uglify": "^0.6.0",
-    "grunt-cmd-concat": "^0.2.8",
-    "grunt-cmd-transport": "^0.5.1",
+    "grunt-filerev": "^2.0.0",
     "grunt-usemin": "^3.0.0",
-    "grunt-filerev": "^2.0.0"
+    "grunt-html2js": "^0.3.2",
+    "grunt-ngmin": "0.0.3",
+    "grunt-cdn": "^0.6.5"
   }
 }
