--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-cdn": "^0.6.5",
+    "grunt-cmd-transport": "^0.5.1",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-copy": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-copy": "^0.6.0",
     "grunt-contrib-cssmin": "^0.10.0clear",
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-filerev": "^2.0.0",
-    "grunt-usemin": "^3.0.0",
     "grunt-html2js": "^0.3.2",
     "grunt-ngmin": "0.0.3",
-    "grunt-cdn": "^0.6.5"
+    "grunt-usemin": "^3.0.0"
   }
 }
