--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular-route": "~1.3.15",
     "angular-bootstrap": "~0.13.0",
     "angular-animate": "~1.3.15",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "modernizr": "~2.8.3"
   }
 }
