--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "express": "^4.12.3",
     "mongoose": "^4.0.2",
     "multer": "^0.1.8",
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0",
     "request": "^2.55.0",
     "swig": "^1.4.2",
     "tingodb": "^0.3.4",
-    "tungus": "0.0.4"
+    "tungus": "0.0.4",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
